fixing the page headline on iphone

--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -5,3 +5,7 @@
 
 @import partials/layout
 @import partials/typography
+
+
+.header h1
+  font-size: 2em
